--- a/SocialNetwork.Data/SocialNetwork.Data.csproj
+++ b/SocialNetwork.Data/SocialNetwork.Data.csproj
@@ -42,7 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\ProfileRepositories.cs" />
+    <Compile Include="Repositories\ProfileRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SocialNetwork.Core\SocialNetwork.Core.csproj">
