--- a/SocialNetwork.Api/packages.config
+++ b/SocialNetwork.Api/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
+  <package id="Microsoft.Azure.KeyVault.Core" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.Owin" version="4.0.0" targetFramework="net461" />
@@ -30,8 +31,10 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.Twitter" version="4.0.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
+  <package id="WindowsAzure.Storage" version="9.3.3" targetFramework="net461" />
 </packages>
