Criacao das classes Gallery e Image

--- a/SocialNetwork.Core/SocialNetwork.Core.csproj
+++ b/SocialNetwork.Core/SocialNetwork.Core.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Gallery.cs" />
+    <Compile Include="Models\Image.cs" />
     <Compile Include="Models\Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
