--- a/SocialNetwork.Web/SocialNetwork.Web.csproj
+++ b/SocialNetwork.Web/SocialNetwork.Web.csproj
@@ -126,6 +126,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\GalleryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ImagesController.cs" />
     <Compile Include="Controllers\ProfileController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Global.asax.cs">
@@ -180,9 +181,11 @@
     <Content Include="Views\Profile\Edit.cshtml" />
     <Content Include="Views\Profile\Gallery.cshtml" />
     <Content Include="Views\Gallery\Index.cshtml" />
+    <Content Include="Views\Gallery\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Images\" />
     <Folder Include="Views\Values\" />
   </ItemGroup>
   <ItemGroup>
