Crud de imagens. O create foi feito, relacionando a imagem a uma galeria de um usuario

--- a/SocialNetwork.Web/SocialNetwork.Web.csproj
+++ b/SocialNetwork.Web/SocialNetwork.Web.csproj
@@ -184,10 +184,10 @@
     <Content Include="Views\Gallery\Index.cshtml" />
     <Content Include="Views\Gallery\Details.cshtml" />
     <Content Include="Views\Gallery\Create.cshtml" />
+    <Content Include="Views\Images\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Images\" />
     <Folder Include="Views\Values\" />
   </ItemGroup>
   <ItemGroup>
