Criando a classe de postagens

--- a/SocialNetwork.Api/SocialNetwork.Api.csproj
+++ b/SocialNetwork.Api/SocialNetwork.Api.csproj
@@ -219,6 +219,7 @@
     <Compile Include="Controllers\GalleryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImagesController.cs" />
+    <Compile Include="Controllers\PostsController.cs" />
     <Compile Include="Controllers\ProfilesController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="Data\BlobCreator.cs" />
