--- a/SocialNetwork.Web/SocialNetwork.Web.csproj
+++ b/SocialNetwork.Web/SocialNetwork.Web.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Models\GalleryViewModel.cs" />
     <Compile Include="Models\ImageViewModel.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\PostViewModel.cs" />
     <Compile Include="Models\ProfileViewModel.cs" />
     <Compile Include="Models\RegisterViewmodel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
